# grepedit

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  hello.py
gredit/: .gitignore  Cargo.toml
gredit/src/: app.rs  config.rs  lib.rs  main.rs  searcher.rs
grepedit/: Cargo.toml
grepedit/src/: app.rs  lib.rs  main.rs
